Add support for user to change the hide/show window shortcut key

--- a/PushbackHelper/App.config
+++ b/PushbackHelper/App.config
@@ -25,6 +25,9 @@
             <setting name="CallUpgrade" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="ShowHideKey" serializeAs="String">
+                <value>19</value>
+            </setting>
         </PushbackHelper.Properties.Settings>
     </userSettings>
 </configuration>
