--- a/PushbackHelper/Properties/Settings.settings
+++ b/PushbackHelper/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="CallUpgrade" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="ShowHideKey" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">19</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
